# lock-in

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE_DESKTOP_SETUP.md  COMMANDS.md  Dockerfile  OPENAI_SETUP.md  README.md  SETUP.md  pyproject.toml  requirements.txt
audio_client/: index.html
examples/: example_traces.json  test_narration.py
mcp_server/: __init__.py  context_manager.py  models.py  narration_generator.py  server.py  trace_listener.py
scripts/: run.sh  setup.sh
tests/: __init__.py  test_integration.py  test_mcp_server.py  test_voice_agent.py
voice_agent/: __init__.py  agent.py  config.py  pipeline.py
